# Halt

./: AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
apt/: index.html
configs/: claude.toml  codex.toml  gemini.toml
configs/linux/: claude.toml  codex.toml  gemini.toml
crates/halt/: Cargo.toml
crates/halt-proxy/: Cargo.toml
crates/halt-proxy/src/: dns.rs  filter.rs  lib.rs  proxy.rs  server.rs
crates/halt-sandbox/: Cargo.toml
crates/halt-sandbox/src/: config.rs  env.rs  lib.rs  linux.rs  linux_netns.rs  macos.rs
crates/halt-settings/: Cargo.toml
crates/halt-settings/src/: lib.rs  loader.rs
crates/halt/src/: cli.rs  error.rs  main.rs
crates/halt/src/commands/: check.rs  config.rs  run.rs
crates/halt/tests/: integration_test.rs
e2e/: Dockerfile  test-agent-configs.sh  test-linux-agents.sh  test-macos-agents.sh
packaging/aur/: PKGBUILD
packaging/homebrew/: halt.rb
