[workspace]
members = ["crates/halt", "crates/halt-proxy", "crates/halt-sandbox", "crates/halt-settings"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Valentin Radu"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["net", "time", "io-util", "rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
