[package]
name = "halt"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Run processes under filesystem and network containment"

[[bin]]
name = "halt"
path = "src/main.rs"

[dependencies]
halt-settings = { path = "../halt-settings" }
halt-sandbox  = { path = "../halt-sandbox" }
halt-proxy    = { path = "../halt-proxy" }
clap          = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror     = { workspace = true }
serde_json    = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
toml = "0.8"
